--- a/skincare/src/main/res/values/strings.xml
+++ b/skincare/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
 
     <!--    Favorites Screen-->
     <string name="favorites_add_to_cart">Add to cart</string>
+    <string name="favorites_empty_wishlist_title">Your Wishlist is empty :(</string>
+    <string name="favorites_empty_wishlist_subtitle">Tip: you can add products to wishlist by\nclicking on the ❤️ icon</string>
 
     <!--    Profile Screen-->
     <string name="my_profile">My profile</string>
