refactor: Added onboarding screen real texts.

--- a/skincare/src/main/res/values/strings.xml
+++ b/skincare/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">Skincare</string>
 
-    <string name="onboarding_title_1">An Evolving collection of treatments 1</string>
-    <string name="onboarding_description_1">The ordinary is born to disallow commodity to be disguised as ingenuity. The Ordinary is “Clinical Formulations with us 1</string>
-    <string name="onboarding_title_2">An Evolving collection of treatments 2</string>
-    <string name="onboarding_description_2">The ordinary is born to disallow commodity to be disguised as ingenuity. The Ordinary is “Clinical Formulations with us 2</string>
-    <string name="onboarding_title_3">An Evolving collection of treatments 3</string>
-    <string name="onboarding_description_3">The ordinary is born to disallow commodity to be disguised as ingenuity. The Ordinary is “Clinical Formulations with us 3</string>
-    <string name="onboarding_title_4">An Evolving collection of treatments 4</string>
-    <string name="onboarding_description_4">The ordinary is born to disallow commodity to be disguised as ingenuity. The Ordinary is “Clinical Formulations with us 4</string>
+    <string name="onboarding_title_1">Welcome to Skincare</string>
+    <string name="onboarding_description_1">Discover the best skincare products and indulge in a luxurious self-care routine with our curated collection. Let\'s get started!</string>
+    <string name="onboarding_title_2">Browse and Shop</string>
+    <string name="onboarding_description_2">Explore our extensive range of skincare products, from cleansers to serums and everything in between. Find your new favorites!</string>
+    <string name="onboarding_title_3">Easy Checkout</string>
+    <string name="onboarding_description_3">Experience hassle-free shopping with our streamlined checkout process. Enjoy secure payments and fast delivery.</string>
+    <string name="onboarding_title_4">Share the Love</string>
+    <string name="onboarding_description_4">Spread the joy of skincare with your friends and family. Refer them to Skincare and earn exclusive rewards!</string>
 
     <!--    Bottom navigation bar-->
     <string name="home">home</string>
