--- a/skincare/src/main/res/values/strings.xml
+++ b/skincare/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Skincare</string>
 
+    <!--    Onboarding screens-->
     <string name="onboarding_title_1">Welcome to Skincare</string>
     <string name="onboarding_description_1">Discover the best skincare products and indulge in a luxurious self-care routine with our curated collection. Let\'s get started!</string>
     <string name="onboarding_title_2">Browse and Shop</string>
@@ -9,6 +10,17 @@
     <string name="onboarding_description_3">Experience hassle-free shopping with our streamlined checkout process. Enjoy secure payments and fast delivery.</string>
     <string name="onboarding_title_4">Share the Love</string>
     <string name="onboarding_description_4">Spread the joy of skincare with your friends and family. Refer them to Skincare and earn exclusive rewards!</string>
+
+    <!--    Authentication screens-->
+    <!--    Sign in screen-->
+    <string name="sign_in_title">Sign In</string>
+    <string name="sign_in_subtitle">Enter your email and password for signing in. Thanks.</string>
+    <string name="sign_in_email_placeholder">jhon.doe@yopmail.com</string>
+    <string name="sign_in_password_placeholder">*********</string>
+    <string name="sign_in_login">Login</string>
+    <string name="sign_in_no_account">No account?</string>
+    <string name="sign_in_create_one">Create one.</string>
+    <string name="sign_in_invalid_email">Invalid email.</string>
 
     <!--    Bottom navigation bar-->
     <string name="home">home</string>
