--- a/skincare/src/main/res/values/strings.xml
+++ b/skincare/src/main/res/values/strings.xml
@@ -28,6 +28,14 @@
     <string name="sign_up_password_validation_constraint_2">1 uppercase</string>
     <string name="sign_up_password_validation_constraint_3">1 symbol</string>
     <string name="sign_up_password_validation_constraint_4">1 number</string>
+    <!--    complete account screen-->
+    <string name="complete_account_name_label">Name*</string>
+    <string name="complete_account_name_placeholder">Jhon DOE</string>
+    <string name="complete_account_age_label">Age*</string>
+    <string name="complete_account_age_value">%d yo</string>
+    <string name="complete_account_gender_label">Gender*</string>
+    <string name="complete_account_gender_man">Man</string>
+    <string name="complete_account_gender_woman">Woman</string>
 
     <!--    Bottom navigation bar-->
     <string name="home">home</string>
@@ -60,6 +68,7 @@
     <string name="common_email_placeholder">jhon.doe@yopmail.com</string>
     <string name="common_password_placeholder">*********</string>
     <string name="common_invalid_email">Invalid email.</string>
+    <string name="common_save">Save</string>
 
 
     <!--    Featured Screen-->
